# pinocchio

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  dockgen.toml  flake.nix  package.xml  pixi.toml  pyproject.toml  sources.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check_label.yml  dockgen.yml  linux.yml  macos-linux-windows-pixi.yml  nix.yml  ros_ci.yml  update-flake-lock.yml  update_pixi_lockfile.yml
.github/workflows/cmake/: linux-debug-toolchain.cmake
.github/workflows/scripts/: get_compilation_flags.js
benchmark/: CMakeLists.txt  timings-geometry.cpp  timings-parallel.cpp
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/algorithm/: expose-delassus.cpp
bindings/python/parsers/: expose-parsers.cpp
bindings/python/parsers/graph/: expose-edges.cpp  expose-frames.cpp  expose-geometries.cpp  expose-model-configuration-converter.cpp  expose-model-graph-algo-geometry.cpp  expose-model-graph-algo.cpp  expose-model-graph.cpp
bindings/python/pinocchio/visualize/: __init__.py  viser_visualizer.py  visualizers.py
development/: release.md
development/scripts/pixi/: activation.bat  activation.sh
doc/: treeview.dox
doc/a-features/: a-spatial.md  b-model-data.md  c-joints.md  d-model.md  e-lie.md  f-kinematic.md  g-dynamic.md  h-frames.md  intro.md  j-analytical-derivatives.md  k-automatic-differentiation.md  l-python.md  m-tests.md
doc/b-examples/: a-model.md  ab-geometry-models.md  b-display.md  c-collisions.md  d-inverse-kinematics.md  e-reduced-model.md  f-update-model.md  intro.md
doc/b-examples/display/: a-gepetto-viewer.md  b-meshcat-viewer.md  c-robot-wrapper-viewer.md
doc/c-maths/: a-rigid-bodies.md  b-joints.md  intro.md  se3.md
doc/d-practical-exercises/: 1-directgeom.md  2-invgeom.md  3-invkine.md  4-dyn.md  5-planner.md  6-wpg.md  7-learn.md  intro.md
doc/d-practical-exercises/src/: dpendulum.py
doc/e-development/: Implement_a_new_joint.md  intro.md
examples/: CMakeLists.txt  append-urdf-model-with-another-model.py  build-reduced-model.cpp  build-reduced-model.py  collision-with-point-clouds.py  collisions.cpp  collisions.py  ellipsoid-joint-kinematics.py  forward-dynamics-derivatives.cpp  geometry-models.cpp  geometry-models.py  gepetto-viewer.py  inverse-dynamics-derivatives.cpp  inverse-dynamics.cpp  kinematics-derivatives.cpp  meshcat-viewer-dae.py  meshcat-viewer.py  model-configuration-converter.cpp  model-configuration-converter.py  model-graph-geometry.py  model-graph.cpp  model-graph.py  multiprecision.cpp  overview-urdf.cpp  overview-urdf.py  robot-wrapper-viewer.py  simulation-contact-dynamics.py  static-contact-dynamics.py  viser-viewer.py
examples/casadi/: CMakeLists.txt  quadrotor-ocp.py
examples/codegen/: CMakeLists.txt  codegen-crba.cpp
examples/cppad/: CMakeLists.txt
include/pinocchio/algorithm/: check-data.hxx  model.hxx
include/pinocchio/bindings/python/context/: generic.hpp
include/pinocchio/bindings/python/multibody/joint/: joint.hpp  joints-datas.hpp  joints-models.hpp
include/pinocchio/bindings/python/parsers/: model-graph.hpp
include/pinocchio/bindings/python/visualizers/: visualizer-visitor.hpp
include/pinocchio/multibody/: data.hxx  joint-motion-subspace-generic.hpp
include/pinocchio/multibody/joint/: fwd.hpp  joint-collection.hpp  joint-composite.hpp  joint-ellipsoid.hpp  joint-free-flyer.hpp  joint-mimic.hpp  joints.hpp
include/pinocchio/parsers/graph/: graph-visitor.hpp  joints.hpp
include/pinocchio/parsers/urdf/: model.hxx
include/pinocchio/serialization/: joints-data.hpp  joints-model.hpp  joints-motion-subspace.hpp
src/: CMakeLists.txt
src/parsers/graph/: model-graph-algo-geometry.cpp  model-graph-algo.cpp  model-graph.cpp
src/parsers/mjcf/: mjcf-graph.cpp
src/parsers/urdf/: model.cpp
unittest/: CMakeLists.txt  all-joints.cpp  broadphase.cpp  contact-dynamics-derivatives.cpp  dynamic-allocations.cpp  finite-differences.cpp  geometry-algorithms.cpp  geometry-model.cpp  joint-composite.cpp  joint-ellipsoid.cpp  joint-generic.cpp  kinematics-derivatives.cpp  mjcf.cpp  model-configuration-converter.cpp  model-graph.cpp  model.cpp  parallel-geometry.cpp  sdf.cpp  serialization.cpp  srdf.cpp  tree-broadphase.cpp  urdf.cpp
unittest/algorithm/utils/: force.cpp
unittest/casadi/: CMakeLists.txt
unittest/cppad/: CMakeLists.txt
unittest/cppadcg/: CMakeLists.txt
unittest/packaging/cmake/: CMakeLists.txt
unittest/packaging/pinocchio_header/: CMakeLists.txt
unittest/packaging/pkgconfig/: CMakeLists.txt
unittest/python/: CMakeLists.txt  bindings_build_geom_from_urdf_memorycheck.py  bindings_contact_inverse_dynamics.py  bindings_geometry_model_urdf.py  bindings_model_graph.py  bindings_urdf.py
unittest/python/pybind11/: CMakeLists.txt
unittest/utils/: model-generator.hpp
